# Hybrid-resume-screening-pipeline

./: .gitignore  API_README.md  GRADIO_UI_SUMMARY.md  README.md  UI_README.md  USER_GUIDE.md  pyproject.toml  pytest.ini  run_full_stack.py  run_server.py  run_ui.py  schema.py
config/: rules.backup.20251118_154307.json  rules.json
docs/: CHEAT_SHEET.md  QUICK_START.md  RULES_EDITING_GUIDE.md  UI_README.md  USER_GUIDE.md
examples/: demo_ui_usage.py
notebooks/: qwen3vl4b-instruct.ipynb  qwen3vl8b-4bit-structured.ipynb  qwen3vl8b-variables-test.ipynb
src/: constants.py  evaluation_results.json  main.py  sample.json  sample_standardized.json
src/api/: routes.py
src/config/: constants.py  model.py  system.py
src/core/: main.py  rules_engine.py  rules_manager.py  screening.py
src/prompts/: template.py
src/schema/: api.py
src/ui/: __init__.py  app.py  components.py  rules_editor.py  utils.py
src/utils/: call_llm.py  logger.py
tests/: __init__.py  test_api.py  test_llm_strategy.py  test_screening.py
